1999-12-13  Tom Tromey  <tromey@cygnus.com>

	* suffix2.test: Added `no-dependencies' to options in
	Makefile.am.  Removed trailing `exit 1'.

	* nostdinc.test: New file.
	* Makefile.am (TESTS): Added nostdinc.test.

	* condincl2.test: New file.
	* condincl.test: New file.
	* Makefile.am (TESTS): Added condincl.test, condincl2.test.

	* suffix2.test: New file.
	* Makefile.am (TESTS): Added suffix2.test.

	* subobj.test: Remove final test.

1999-12-12  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (XFAIL_TESTS): Removed subobj3.test.

1999-12-10  Tom Tromey  <tromey@cygnus.com>

	* install2.test: New file.
	* Makefile.am (TESTS): Added install2.test.

	* specflags5.test: New file.
	* Makefile.am (TESTS): Added specflags5.test.

1999-12-06  Tom Tromey  <tromey@cygnus.com>

	* confh4.test: Corrected final test.

	* confh4.test: New file.  PR automake/34.
	* Makefile.am (TESTS): Mention confh4.test.

1999-11-22  Tom Tromey  <tromey@cygnus.com>

	* defs: Never hard link `depcomp'.  From Pavel Roskin

	* exsource.test: Don't use configure substitution in _SOURCES.
	* depend.test: Don't use configure substitution in _SOURCES.
	* cygwin32.test: Don't use configure substitution in _SOURCES.

	* subobj.test: Check for another bug.

	* Makefile.am (XFAIL_TESTS): Removed sourcesub.test,
	ltlibobjs.test.

1999-11-21  Tom Tromey  <tromey@cygnus.com>

	* specflags3.test: Updated test for new dependency
	implementation.

1999-10-02  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* defs: Set CDPATH to avoid verbose cd.

1999-09-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* defs: Avoid printing the full pathname of testSubDir.

	* exsource.test: Update.

1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* exsource.test: sed @AMDEP@ away from `include' line.

	* compile_f_c_cxx.test: depcomp is no longer in the same line.

1999-04-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* compile_f_c_cxx.test: Look for $(depcomp) for C and C++.