@@ -1,0 +1,22 @@
+#! /bin/sh
+
+# Test to make sure that suffix rules chain.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AC_PROG_CXX
+END
+
+cat > Makefile.am << 'END'
+SUFFIXES = .zoo
+.zoo.cc:
+	convert-zoo whatever
+bin_PROGRAMS = foo
+foo_SOURCES = foo.zoo
+END
+
+$AUTOMAKE || exit 1
+
+fgrep foo.cc Makefile.in && exit 1
+exit 0
