@@ -1,5 +1,8 @@
 1999-12-13  Tom Tromey  <tromey@cygnus.com>
 
+	* suffix3.test: New file.
+	* Makefile.am (TESTS): Added suffix3.test.
+
 	* suffix2.test: Added `no-dependencies' to options in
 	Makefile.am.  Removed trailing `exit 1'.
 
